--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,
   feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
-  
+  <link rel="preload" href="./css/style.css " as="style">
   <link rel="stylesheet" href="./css/style.css">
+
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&
   family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,
+  wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&
+  display=swap" rel="stylesheet">
 </head>
   <!-- <STYLE>A {text-decoration: none;} </STYLE> -->
 
@@ -41,7 +47,7 @@
     <div class="introducao container">
       <div class="introducao-conteudo">
         <h1 class="font-1-xxl cor-0 ">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qialidade, feitas sob medida para você.
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
         Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="./bicicletas.html">Escolha a sua</a>
       </div>
@@ -109,8 +115,111 @@
           <img src="./img/fotos/tecnologia.jpg" alt="">
         </div>
     </div>
+  </article>
+
+  <section class="parceiros" aria-label="Nossos Parceiros"> <!-- não faz sentido sozinho, apenas no contexto da bikcraft, parceiros da bikcrafit -->
+    <h2 class="container font-1-xxl">Nossos parceiros<span class="cor-p1">.</span></h2>
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li><!-- usar sempre imagem de alta qualidade svg, ñ png -->
+      <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="handel"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="lescone"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="w0ildbeast"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+    </ul>
+
+  </section>
+
+  <section class="depoimento" aria-label="depoimento">
+    <div>
+      <img src="./img/fotos/depoimento.jpg" alt="Pessoa pedalando uma
+      bicicleta bikcrafit">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote class="font-1-xl cor-p5">
+        <p>Pedalar sempre foi minha paixão, o que o pessoal da
+        Bikcraft fez foi intensificar o meu amor por esta atividade.
+        Recomento à todos que amo</p> 
+      </blockquote><!-- alguem que disse isso -->
+      <span class="font-1-m-b cor-p4">Ana Júlia</span>
+
+    </div>
+
+  </section>
+
+  <article class="seguros-bg"> <!-- funciona puro -->
+    <div class="seguros container">
+      <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-6">PRATA</h3>
+        <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" cor href="./orcamento.html">Inscreva-se</a>
+      </div>
+
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-p1">OURO</h3>
+        <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24hr</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="botao" cor href="./orcamento.html">Inscreva-se</a>
+      </div>
+    </div>
 
   </article>
+
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">Contato</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+5584999999999">+55 84 99999-9999</a></li>
+          <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+          <li>Rua Aculá, 420 - Botafogo</li>
+          <li>Rio de Janeiro -RJ</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./">
+            <img src="./img/redes/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./img/redes/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./img/redes/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">Informações</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+
+  </footer>
 
 </body>
 </html>
