Implementando JavaScript e otimizando o css

--- a/termos.html
+++ b/termos.html
@@ -9,8 +9,9 @@
   <meta name="description" content="Termos e Condições">
 
   
-    <link rel="preload" href="./css/style.css " as="style">
-  <link rel="stylesheet" href="./css/style.css">
+       <link rel="icon" href="./favicon.svg" type="img/svg+xml">
+  <link rel="preload" href="./css/style.min.css " as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
 
 
@@ -23,7 +24,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,
   wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&
   display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
+
   <!-- <STYLE>A {text-decoration: none;} </STYLE> -->
 
 <body id="termos">
@@ -123,5 +126,7 @@
 
   </footer>
 
+   <script src="./js/script.js"></script>
 </body>
+
 </html>
