--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,
   feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
-  <link rel="preload" href="./css/style.css " as="style">
-  <link rel="stylesheet" href="./css/style.css">
-
+  
+  <link rel="icon" href="./favicon.svg" type="img/svg+xml">
+  <link rel="preload" href="./css/style.min.css " as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
+  
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +25,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,
   wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&
   display=swap" rel="stylesheet">
+  
+
+  <script>document.documentElement.classList.add('js');</script>
 </head>
+
   <!-- <STYLE>A {text-decoration: none;} </STYLE> -->
 
 <body>
@@ -43,19 +49,22 @@
     </div>
   </header>
 
-  <main class="introducao-bg">
+  <main class="introducao-bg" >
     <div class="introducao container">
       <div class="introducao-conteudo">
-        <h1 class="font-1-xxl cor-0 ">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
+        <h1 class="font-1-xxl cor-0 fadeInDown"  data-anime="200">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5" fadeInDown data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
         Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+        <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">Escolha a sua</a>
       </div>
       <div >
-        <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+        <picture fadeInDown data-anime="800">
+          <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+          <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
+        </picture>
+        <!-- <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta."> -->
       </div>
     </div>
-
   </main>
 
   <article class="bicicletas-lista">
@@ -129,7 +138,6 @@
       <li><img src="./img/parceiros/wildbeast.svg" alt="w0ildbeast"></li>
       <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
     </ul>
-
   </section>
 
   <section class="depoimento" aria-label="depoimento">
@@ -218,8 +226,10 @@
       </div>
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
-
   </footer>
 
+  <script src="./js/plugins/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
